--- a/wp-content/themes/letsrock/css/fonts.css
+++ b/wp-content/themes/letsrock/css/fonts.css
@@ -10,3 +10,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Geometria';
+  src: url('fonts/Geometria.eot');
+  src: url('fonts/Geometria.eot?#iefix') format('embedded-opentype'),
+  url('fonts/Geometria.woff') format('woff'),
+  url('fonts/Geometria.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  }
+
