--- a/wp-content/themes/letsrock/css/style.css
+++ b/wp-content/themes/letsrock/css/style.css
@@ -1022,6 +1022,23 @@ ul.list li:before {
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
 }
+.modal__title {
+    font-family: "Philosopher-Bold";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 40px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 40px;
+}
+.modal__form {
+    padding: 40px 60px 60px;
+}
+
+.modal.modal-ask-question .inner {
+    max-width: 540px;
+}
 @media (max-width: 1160px) {
     #sec-1,
     #sec-2,
@@ -1044,4 +1061,234 @@ ul.list li:before {
         padding: 40px;
         box-sizing: border-box;
     }
+}
+
+/* ask-question */
+.ask-question,
+.ask-question__button {
+    position: fixed;
+    right: 100px;
+    bottom: 50px;
+    display: inline-block;
+    z-index: 100;
+    cursor: pointer;
+}
+
+.ask-question {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 14px 35px 18px 16px;
+    width: 221px;
+    height: 80px;
+    background: url('../img/ask-question.svg') no-repeat;
+    font-family: 'Geometria';
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+    color: #FFFFFF;
+}
+.ask-question__border {
+    background-color:rgba(255, 255, 255, 0.2);
+    padding: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px 10px 0px 10px;
+}
+
+.ask-question__inner {
+    position: relative;
+    font-family: 'Geometria';
+    font-size: 18px;
+    line-height: 23px;
+    color: #FFFFFF;
+    background: #E67E22;
+    padding: 18px 25px;
+    opacity: 0.92;
+    border-radius: 8px 8px 0px 8px;
+    z-index: 1;
+}
+
+.ask-question__button::after {
+    content: '';
+    position: absolute;
+    opacity: 0.92;
+    width: 0;
+    height: 0;
+    right: -11px;
+    bottom: 4px;
+    border-bottom: 15px solid #E67E22;
+    border-right: 15px solid transparent;
+    z-index: 2;
+}
+
+.ask-question__button::before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    right: -20px;
+    bottom: 0px;
+    border-bottom: 20px solid rgba(255, 255, 255, 0.2);
+    border-right: 20px solid transparent;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: -1;
+}
+
+/* form */
+.form-label {
+    display: block;
+}
+
+.form-label + .form-label {
+    margin-top: 12px;
+}
+
+.form-input {
+    background: #FFFFFF;
+    border: 1px solid #DFDFDF;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-family: 'Geometria';
+    font-size: 16px;
+    line-height: 18px;
+    color: #707070;
+    padding: 16px 15px 12px 15px;
+    width: 100%;
+}
+
+.form-textarea {
+    color: #707070;
+    padding: 16px 15px 12px 15px;
+    font-family: 'Geometria';
+    width: 100%;
+    background: #FFFFFF;
+    border: 1px solid #DFDFDF;
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    min-height: 170px;
+}
+
+.form-personal-data {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.form-center {
+    text-align: center;
+}
+
+.form-submit {
+    border: none;
+    background: #E67E22;
+    border-radius: 4px;
+    font-family: 'Geometria';
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+}
+
+.form-submit:active,
+.form-submit:focus {
+    outline: none;
+}
+
+.form-submit:disabled {
+    opacity: .7;
+}
+.error .form-input,
+.error .form-textarea {
+    border: 1px solid #F56588;
+}
+.error {
+    position: relative;
+}
+.form-error {
+    position: absolute;
+    bottom: -28px;
+    left: -20px;
+    background: #F56588;
+    border-radius: 4px;
+    font-family: 'Geometria';
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+    padding: 3px 10px;
+    box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.12);
+    z-index: 1000;
+}
+.form-error::after {
+    content: '';
+    position: absolute;
+    left: 20px;
+    top: -4px;
+    border-left: 8px solid transparent;
+	border-right: 8px solid transparent;
+	border-bottom: 6px solid #F56588;
+    width: 0;
+    height: 0;
+}
+.checkbox {
+    display: block;
+    padding: 8px 0;
+    cursor: pointer
+}
+
+.checkbox:hover .checkbox__name {
+    color: #E67E22 !important
+}
+
+.checkbox:hover .checkbox__box {
+    border-color: #E67E22
+}
+
+.checkbox input {
+    display: none
+}
+
+.checkbox input:checked + .checkbox__content .checkbox__box {
+    border-color: #E67E22;
+    background-color: #E67E22;
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTMiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEzIDkiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTEuMDU3NTUgMy41TDQuOTI1OTggN0wxMS41NTc2IDEiIHN0cm9rZT0iI0ZGRkZGRiIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2UtbGluZWNhcD0icm91bmQiLz48L3N2Zz4=);
+    background-repeat: no-repeat;
+    background-position: 50%
+}
+
+.checkbox input:checked + .checkbox__content .checkbox__name {
+    color: #4B4B4B
+}
+
+.checkbox__content {
+    display: inline-block;
+    position: relative;
+    padding-left: 24px
+}
+
+.checkbox__box {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: auto;
+    width: 14px;
+    height: 14px;
+    border-radius: 2px;
+    background: #FFF;
+    border: 1px solid #E67E22;
+    transition: border .2s
+}
+
+.checkbox__name {
+    text-align: left;
+    font-family: 'Geometria';
+    font-size: 13px;
+    line-height: 18px;
+    color: #707070;
+    margin: 0;
+    transition: all .2s
 }
